work on user interface

--- a/core/templates/core/footer.html
+++ b/core/templates/core/footer.html
@@ -1,33 +1,27 @@
-<hr>
-<footer class="footer navbar-fixed">
+
+<footer class="navbar-fixed mt-2" style="background-color: #262a34">
     <!--Footer Links-->
-    <div class="container-fluid">
-        <div class="row">
+    <div class="container" style="color: #fff;">
+        <div class="row mt-2">
             <!--First column-->
-            <div class="col-md-6">
-                <h4 class="title"><b>Footer Content</b></h4>
-                <p>Here you can use rows and columns here to organize your footer content.</p>
+            <div class="col-md-6 my-1">
+                <h3 class="title"><b>PARAGON</b></h3>
+                <p>Paragon Bank is a leading private sector bank in India. The Bank’s consolidated total assets stood at Rs.00.00 trillion at Feb 16, 2020</p>
             </div>
             <!--/.First column-->
             <!--Second column-->
-            <div class="col-md-6">
-                <h5 class="title"><b>Links</b></h5>
+            <div class="col-md-6 my-1">
+                <h3 class="title"><b>LINKS</b></h3>
 
-                <a href="{% url 'home' %}">Home </a>|
-                <a href="{% url 'about' %}">About Us</a> |&nbsp;
+                <a href="{% url 'home' %}"> HOME </a>|
+                <a href="{% url 'about' %}"> ABOUT US</a> |&nbsp;
 
 
             </div>
             <!--/.Second column-->
         </div>
     </div>
-    <!--/.Footer Links-->
-    <!--Copyright-->
-    <div class="footer-copyright">
-        <div class="container-fluid">
-            © 2017 Copyright: <a href="http://127.0.0.1:8000/"> banking-system.com</a>
-        </div>
-    </div>
-    <!--/.Copyright-->
 </footer>
-<br>
+
+
+
