--- a/accounts/templates/accounts/register_form.html
+++ b/accounts/templates/accounts/register_form.html
@@ -4,13 +4,29 @@
 
 {% block content %}
 {% include "core/messages.html" %}
-<h2>{{ title }}</h2><hr>
-<form method="POST" action="" enctype='multipart/form-data'>
+<h1 class="text-center border border-top-0 bg-light text-dark">{{ title }}</h1><br><br>
+
+
+<form method="POST" action="" enctype='multipart/form-data' class="col-10 mx-auto border form-label shadow-lg p-3 mb-5 bg-body-tertiary rounded bg-light text-dark">
     {% csrf_token %}
-    {{ user_form|crispy }}
-    {{ account_form|crispy }}
-    {{ address_form|crispy }}
+    {% for field in user_form %}
+        {% if field.name != 'password' %}
+            <div class="form-group">
+                {{ field|as_crispy_field }}
+            </div>
+        {% endif %}
+    {% endfor %}
+    {% for field in account_form %}
+        <div class="form-group">
+            {{ field|as_crispy_field }}
+        </div>
+    {% endfor %}
+    {% for field in address_form %}
+        <div class="form-group">
+            {{ field|as_crispy_field }}
+        </div>
+    {% endfor %}
     <br>
-    <input class="btn btn-success" type="submit" value='Submit'>
+    <button class="btn btn-success" type="submit">Submit</button>
 </form>
 {% endblock content %}
