--- a/transactions/templates/transactions/form.html
+++ b/transactions/templates/transactions/form.html
@@ -4,14 +4,17 @@
 
 {% block content %}
 {% include "core/messages.html" %}
-<div class="alert alert-info" role="alert"><h4>Your Current Account Balance is {{request.user.balance}} $</h4></div>
 
-<h2>{{ title }}</h2><hr>
+<div class="alert alert-info text-center" role="alert"><h5><b>Your Current Account Balance is {{request.user.balance}} ₹</b></h5></div>
+<br><br>
+<div class="col-8">
+<h2 >{{ title }}</h2><hr>
 <form method="POST" action="" >
     {% csrf_token %}
     {{ form|crispy }}
     <br>
     <input class="btn btn-primary" type="submit" value='{{ title }}'>
 </form>
+</div>
 {% endblock content %}
 
