--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -9,10 +9,11 @@
     <title>{% block title %} Banking System {% endblock title %}</title>
 
     <!-- Bootstrap -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   </head>
 
-  <body style="background-color: #FFE6E6;">
+  <body style="background-color: #ffe6e6;">
 {% include "core/navbar.html" %}
 
 <div class="container" style="padding-top: 60px;">
@@ -22,6 +23,7 @@
 </div>
 
 {% include "core/footer.html" %}
+
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
