--- a/core/templates/core/footer.html
+++ b/core/templates/core/footer.html
@@ -1,5 +1,6 @@
 
-<footer class="navbar-fixed mt-2" style="background-color: #262a34">
+<br><br><br>
+<footer class="navbar-fixed mt-2" style="background-color: #262a34; position: hidden; bottom: 0; width: 100%;">
     <!--Footer Links-->
     <div class="container" style="color: #fff;">
         <div class="row mt-2">
@@ -22,6 +23,3 @@
         </div>
     </div>
 </footer>
-
-
-
